@@ -1562,6 +1562,14 @@ ruby_stack_overflowed_p(const rb_thread_t *th, const void *addr)
 
     if (th) {
 	size = th->machine_stack_maxsize;
+#if defined(HAVE_GETRLIMIT) && MAINSTACKADDR_AVAILABLE
+	if (pthread_equal(th->thread_id, native_main_thread.id)) {
+	    struct rlimit rlim;
+	    if (getrlimit(RLIMIT_STACK, &rlim) == 0 && rlim.rlim_cur > size) {
+		size = rlim.rlim_cur;
+	    }
+	}
+#endif
 	base = (char *)th->machine_stack_start - STACK_DIR_UPPER(0, size);
     }
 #ifdef STACKADDR_AVAILABLE
